--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
  <head>  
    <meta charset="utf-8">  
    <title>Hello, world!</title>  
- </head>  
+ </head>
+
+
  <body>  
 <p> Name: Faris Ali 2243149</p>
 <p> Labs </p> 
 <h2> Lab2: HTML</h2>
 
-<a href="Lab2.html"></a>
+<a href="Lab2.html">Lab 2</a>
 
 </body>  
 </html>
