--- a/Lab2.html
+++ b/Lab2.html
@@ -56,6 +56,42 @@
           <dl>  <dt>  item1 <dd>  Description</dd></dt>
             <dt>  item2 <dd>  Description</dd></dt>
           </dl>
+
+          <table border="1">
+            <tr>
+              <th>Basics</th>
+              <th>Front-end Frameworks</th>
+              <th>Server-side frameworks</th>
+              </tr>
+              
+              <tr>
+                <td>HTML</td>
+                <td>React</td>
+                <td>Spring</td>
+              </tr>
+              <tr>
+                <td>CSS</td>
+                <td>Angular</td>
+                <td>Django</td>
+              </tr>
+              <tr>
+                <td>JS</td>
+                <td>Vue</td>
+                <td>Laravel</td>
+              </tr>
+          </table>
+          <form>
+            <label for="Name"></label>
+            <input type="text">name
+            <hr>
+            <label for="password"></label>
+              <input type="text">password
+              <hr>
+              <input type="submit" name="login">
+
+
+          </form>
+
 		</body>
         
    </html>
