--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
-<!DOCTYPE html>  
-<html>  
- <head>  
-   <meta charset="utf-8">  
-   <title>Hello, world!</title>  
- </head>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Hello, world!</title>
+</head>
 
 
- <body>  
-<p> Name: Faris Ali 2243149</p>
-<p> Labs </p> 
-<h2> Lab2: HTML</h2>
+<body>
+  <p><strong>Faris Al-Harthi</strong></p>
+  <p><strong>2243149</strong></p>
+  <h1>CPIT405 Labs</h1>
+  <div class="profile-image">
+      <img src="20210530_122247739_iOS.png"  alt="Faris as a kid">
+      <style>
+      .profile-image img{
+        
+    position: absolute;   /* This allows you to move the div anywhere */
+    top: 20px;            /* 20px space from the top */
+    right: 20px;          /* 20px space from the right */
+    z-index: 100;         /* Ensures it stays on top of other content */
 
-<a href="Lab2.html">Lab 2</a>
+    width: 100px;         /* Makes the picture small */
+    height: auto;
+    border-style: solid;
+    border-width: 1px;
 
-</body>  
+    
+      }
+
+    </style>
+
+  </div>
+  <hr>
+  <h2> Lab2: HTML</h2>
+
+  <a href="lab2/Lab2.html">Lab 2</a>
+  <h2> Lab3: CSS</h2>
+
+
+  <a href="lab3/Lab3.html">Lab 3</a>
+
+</body>
+
 </html>
