--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
   <hr>
   <h2> Lab2: HTML</h2>
 
-  <a href="lab2/Lab2.html">Lab 2</a>
+  <a href="Lab2.html">Lab 2</a>
   <h2> Lab3: CSS</h2>
 
 
-  <a href="lab3/Lab3.html">Lab 3</a>
+  <a href="Lab3.html">Lab 3</a>
 
 </body>
 
 </html>
+
